Dashboard and gamesystem v2 (#8)
Integrate the game system state into the dashboard

* Initial commit

Gamesystem initial structure

* revert to python 2.7

fix for enum in 2.7

* revert to 2.7 from 3

dependencies fix
update readme

* Cleanup pylint + PR comments

Applied PR comments
Pylint cleanup

* Added ROS node to gamesystem and created view to display data in the diagnostic web interface

* Moved client.py to bin folder + fixed other PR comments

* Misc fixes

--- a/dashboard/views/index.html
+++ b/dashboard/views/index.html
@@ -13,10 +13,10 @@
               <input class="uk-search-input command-search" type="search" placeholder="Search... (Todo)">
             </form>
           </li>
-          <li class="command-test command-menu">Test</li>
+          <li class="command-gamestate command-menu">Game State</li>
         <ul>
       </div>
-      <div class="uk-width-expand command-view command-current" name="test" hidden>
+      <div class="uk-width-expand command-view command-current" name="gamestate" hidden>
         {% include 'subscriber.html' %}
       </div>
     </div>
