Depth calculation (kinect) ros package with support in the dashboard
* Depth calculation ros package with support in the dashboard

--- a/dashboard/views/kinect_subscriber.html
+++ b/dashboard/views/kinect_subscriber.html
@@ -7,50 +7,57 @@
 <label><input type="checkbox" class="uk-checkbox"> Subscribe</label>
 
 <br /><br />
+Position found (2D): <span id="kinect_pos_found">N/A</span><br />
+Position calculated (3D): <span id="kinect_pos_calc">N/A</span>
+<br /><br />
 <!-- Place holder "please subscribe" image -->
-<img id="kinect_image" alt="Kinect Image" src="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAF8AAAAyCAYAAAA6JgdxAAAJwklEQVR4Xu2bCbR2YxXHf8aIiMiU
-eQqJzCUyD8tMIWmQYcm0QspQGTKWeR6XaSljmTNGiEqRItOiyRiiEEKs31178zjr3Pfe8553ffeu
-5ey17vre797nnPM8/2c/e//32f93IjobMwQmGrMndw+mA38MnaAD/30I/qTA68BzwAxjuP4xfXRb
-z/8mcNQwK3gF+AdwA3A48JdiXAc+tI75Cf6jwJ0FuG7qzMAngQ8DLwFrArfHmA78AYJ/BrBNzQmY
-GjgB+ArwALBQB/67KA0q7AwHvk/6APA8MCXwceBBoJfnzwvsDawep+ffwG+AHwK31Gzw/MD3gJVi
-vLnEjXZOJwP/r1zzeWAHYHFA53gWuAc4Fvh5Zaz4bB0/n4h5/xW4GDgUeLlN0pgQ4Du/+wP4FYFb
-e4C/JHAjMC1wBfA7YHbgi8AHga8C5xYLniPC3YzAVcC9wPTAF4DpIh/tVozfFjgVeAb4KfBPYDZg
-wxhfvb/P2hJ4Evgx8BqwCrAc8AfA9bzY7wZMCPD1eFmN/84TibfO853Ln4BFgC2AnxSL0rt/C0wS
-99BbNb11Z+BHwLeL8Z6ePwMTAx+Nk+ef/wgsCswHPFKM/1iMvw/4dPx+U+AC4PfAygXIztPn7hTe
-v9d4BV9vPR7YKjx0mR4xf3ngtkjKfq6aAH8L2B44Jf64BODG/Ap4rHLBr4Flgc/G3/3z3wGBnhV4
-qjJ+cuB/xe+uB1YD1gD8XJokwlOjE3ivvmxQnl9lO05Gj5PtfCQmqvfojVqd5+8elLTqxbmw9YHL
-gDOBr9es1rUYagRROysYlrlDuquZ/I335gSfc3XNJuStDSfmBH/qYvtdwKeAOWNTG2/AoMCve/Cr
-wN+AK2OhTxeD6sA/rBI6hlvMdQFqbuKusRmeAMNS1UrwJwOOi/F+1nQI52hyzlrEEPnfUaL5GeCO
-UY59z7BBgd+L7dTNqw582cN3gJuBX/ZYjBuq92smQZOxJ8/fyaQyAX4/4ncJft52FsCTtHYk0A9F
-yPkycCEwBWCR+BZwwAjAnl0pIEe9D+MJ/CzYTgR2HMUKTJoPR0iTBspgSnMDZSN14JfjBPprcSIs
-Bi0OZTUvBOsyfFbvPYrpjTxkPIEvy7ACli7KSKpm7DUhZlJcK3i5IWO9ymAB8zRMVQHf+Oz1Useq
-5WYtHNT42ki21gWX1IyX0v5rZIiHHzGewHcuAu/ivxExOGdufBYAObY/0k43SOqo91s5vxmDDSHS
-VGsGvVjOb1G0WHDzX0S4KZmN1xj7DUczBTVOqumcfGbp/SsA3ufSuH9fezCewHcBSwczmQa4PDi2
-tE7PNsycHzHesXJ4K9+lojDTU2U75gBpplXrIcDdUZj5AvC8qCE8FVaz+VZ1nWAtxwCGv7TMKY8H
-5zefGOLMFxIKqaiO0JeNN/BdhCBbuOTrBeOvxc85we/Twx0rx5YySmPdJEt/KeYRsRFSU0+AYHui
-3DDrhC8BC8QY47wnyITttSbZNMdLa/0RdFmQ9YFe78ZKWfu2tuD3/eDuwvavlDsMWyDQeX4L8Npe
-2oHfFsEW13fgtwCv7aUd+G0RbHF9B34L8Npe2oHfFsEW13fgtwCv7aUd+G0RbHH9hALf9qCtQV+G
-+aJqPFq+JbVvu3lM8EBgn+gT2w4dqHXgvwvn5wAbI6ombMprHfgDdbdmN+vAb4bXQEdPMPBtInw3
-Gg3KK1R+KcewYeBr2+zaqCq2sWAvda6apV4TDW7fzSt60jLm+1rW1p4KAl8d26S+KXq3pY7Ga5oo
-y/JVsRIVGyu+FvY9+/4VldtBoYbbICQkxnO7Xb6O7hXzbWsq/NovFAs+T9GU/09lRAmF6jllLoqr
-bNQoM1F+4nzEbcgy5quvsfkgIN5MoZBmklT3YpIUTBsIbcA/KZoZKhDU0BhnbYbY1lNmkmKopsqy
-i2Kz7EbZgFfxJsC2HtWJpspt3wDsyHiv7/t+3+dvNwL4p8V9dBSfoSjLhoq9BRsqZcPfuasrsg9h
-80altmvbCFD6aBdsiHQk+BtHm85JOtnSnKjqLMfYL20DvuC6iTY98vkCYKdKr/TkaU2UZTIT24Z2
-prxPNlsWBNTWeApsJwqyTZqDAwTbhDpBWi/PV+8peHbX0vRsI4KCLR1UM2J4glU+6PVls8WTrJPY
-ZRtSxSX4dmpSWGr/tDRlHj48BadtwFceUpXX6f16qydP8arWRFmWjW49yvBWmi1BAVERYTdrz+hA
-vQPAKMGvG6/qQQGwQmAxMSwbxswTbrCfq6aM3pM+JBhO8OcOnaRtMo+MJ8CBb9TcoA3464agtbyt
-IUKZhg1tF6I1UZbp0cZtQ6ce18sSfPu5pYDWa3p5vl/u2KPmxvaHdZgUTklTXaM9YdVwVTOKKPJS
-kHtOyfNNhMY2e5uazWJjnEfa45LHuQ349lMNBVVzk1WbCaJJeLTKMscLvrlIxxnJEnwl6PZgS+sF
-vlJGgauaimqVDQm2Df3Uo/aay9Dzq0WWWdww4M0UiKZ+xrjmN0vULLYBXy8xvAwHvgAKZNpIyrKU
-9ekYbljZ/K5bfIKvF+vNowXf8KWyoWqSk1WDIcryUpxrI/4dVlNznQn6ppEqXE+BXX2PlRNXT6nw
-1cRpXFaEVDXBNbvXUU2Zgd5SWoYdQ4ahYzgbTln2n6BzavSTLQ13j37BN477BYyqZdhRDS21lZbL
-skzmRoueVlJNhaZ1XqksQ6mEGsbNIjR41F20wJUmX34iQkAd+CYhk1Fphjs9wZrAa7QmyjLn5hzV
-66jrKc3krmeq21QN1y/4cnQjQWn5jRv/VS8kHsmmfA+UryjKaxxnfhs6oQl+7lidrtEEYbw7OpKF
-16ldsShzYS5eM2TJ49U9KtOuA9+izdCjWClNNdkm4Vl6WFNlmcnLY25tYshMObcFoPlFcGQ8MpN+
-wZfpyabyC33OXfqt4tmT7InW/KbMQ0FUnEvWS/7NEOr1Yu4XQF5O8E2EgmgMlS8rUtKM+Sp5LQ4E
-U7qmmaxciCfAE+G/erA7ahGiKCmPouMzFro5sgH5stTMBVkNGh8F3edoTZRlbrq1gvf1Ps7fROxX
-fawuLXpOj/s2BT+V0xIRT/3PAgOraGWIEgVBNtGmKcqS2pq7sshy8+X5er7VvTi856ugKrqkX2Zv
-vVp+r0zOpCLY1e/R+jUcawLH+rpBmuWx+0GojAU1K7+MjcZlJ2G5nq8XLHSUhptD0poqy5zrLkHh
-DJ96ql5n+S9jS2sKvpTUZCvQ5hNfD/htGJ3WMGlRWK0tfJZhUIZkoWUoNtSYE0za1iVDNlLCLebd
-fRw0Ah34g0a0wf068BuANeihHfiDRrTB/d4GEc7BUcDuUYUAAAAASUVORK5CYII=" />
-
+<div id="kinect_image_container" style="position:relative">
+  <div id="kinect_image_obj_position" style="
+  visibility: hidden; background-color: green;width:20px;height:20px;position:absolute;"></div>
+  <img id="kinect_image" alt="Kinect Image" style="max-width:none" src="data:image/png;base64, 
+  iVBORw0KGgoAAAANSUhEUgAAAF8AAAAyCAYAAAA6JgdxAAAJwklEQVR4Xu2bCbR2YxXHf8aIiMiU
+  eQqJzCUyD8tMIWmQYcm0QspQGTKWeR6XaSljmTNGiEqRItOiyRiiEEKs31178zjr3Pfe8553ffeu
+  5ey17vre797nnPM8/2c/e//32f93IjobMwQmGrMndw+mA38MnaAD/30I/qTA68BzwAxjuP4xfXRb
+  z/8mcNQwK3gF+AdwA3A48JdiXAc+tI75Cf6jwJ0FuG7qzMAngQ8DLwFrArfHmA78AYJ/BrBNzQmY
+  GjgB+ArwALBQB/67KA0q7AwHvk/6APA8MCXwceBBoJfnzwvsDawep+ffwG+AHwK31Gzw/MD3gJVi
+  vLnEjXZOJwP/r1zzeWAHYHFA53gWuAc4Fvh5Zaz4bB0/n4h5/xW4GDgUeLlN0pgQ4Du/+wP4FYFb
+  e4C/JHAjMC1wBfA7YHbgi8AHga8C5xYLniPC3YzAVcC9wPTAF4DpIh/tVozfFjgVeAb4KfBPYDZg
+  wxhfvb/P2hJ4Evgx8BqwCrAc8AfA9bzY7wZMCPD1eFmN/84TibfO853Ln4BFgC2AnxSL0rt/C0wS
+  99BbNb11Z+BHwLeL8Z6ePwMTAx+Nk+ef/wgsCswHPFKM/1iMvw/4dPx+U+AC4PfAygXIztPn7hTe
+  v9d4BV9vPR7YKjx0mR4xf3ngtkjKfq6aAH8L2B44Jf64BODG/Ap4rHLBr4Flgc/G3/3z3wGBnhV4
+  qjJ+cuB/xe+uB1YD1gD8XJokwlOjE3ivvmxQnl9lO05Gj5PtfCQmqvfojVqd5+8elLTqxbmw9YHL
+  gDOBr9es1rUYagRROysYlrlDuquZ/I335gSfc3XNJuStDSfmBH/qYvtdwKeAOWNTG2/AoMCve/Cr
+  wN+AK2OhTxeD6sA/rBI6hlvMdQFqbuKusRmeAMNS1UrwJwOOi/F+1nQI52hyzlrEEPnfUaL5GeCO
+  UY59z7BBgd+L7dTNqw582cN3gJuBX/ZYjBuq92smQZOxJ8/fyaQyAX4/4ncJft52FsCTtHYk0A9F
+  yPkycCEwBWCR+BZwwAjAnl0pIEe9D+MJ/CzYTgR2HMUKTJoPR0iTBspgSnMDZSN14JfjBPprcSIs
+  Bi0OZTUvBOsyfFbvPYrpjTxkPIEvy7ACli7KSKpm7DUhZlJcK3i5IWO9ymAB8zRMVQHf+Oz1Useq
+  5WYtHNT42ki21gWX1IyX0v5rZIiHHzGewHcuAu/ivxExOGdufBYAObY/0k43SOqo91s5vxmDDSHS
+  VGsGvVjOb1G0WHDzX0S4KZmN1xj7DUczBTVOqumcfGbp/SsA3ufSuH9fezCewHcBSwczmQa4PDi2
+  tE7PNsycHzHesXJ4K9+lojDTU2U75gBpplXrIcDdUZj5AvC8qCE8FVaz+VZ1nWAtxwCGv7TMKY8H
+  5zefGOLMFxIKqaiO0JeNN/BdhCBbuOTrBeOvxc85we/Twx0rx5YySmPdJEt/KeYRsRFSU0+AYHui
+  3DDrhC8BC8QY47wnyITttSbZNMdLa/0RdFmQ9YFe78ZKWfu2tuD3/eDuwvavlDsMWyDQeX4L8Npe
+  2oHfFsEW13fgtwCv7aUd+G0RbHF9B34L8Npe2oHfFsEW13fgtwCv7aUd+G0RbHH9hALf9qCtQV+G
+  +aJqPFq+JbVvu3lM8EBgn+gT2w4dqHXgvwvn5wAbI6ombMprHfgDdbdmN+vAb4bXQEdPMPBtInw3
+  Gg3KK1R+KcewYeBr2+zaqCq2sWAvda6apV4TDW7fzSt60jLm+1rW1p4KAl8d26S+KXq3pY7Ga5oo
+  y/JVsRIVGyu+FvY9+/4VldtBoYbbICQkxnO7Xb6O7hXzbWsq/NovFAs+T9GU/09lRAmF6jllLoqr
+  bNQoM1F+4nzEbcgy5quvsfkgIN5MoZBmklT3YpIUTBsIbcA/KZoZKhDU0BhnbYbY1lNmkmKopsqy
+  i2Kz7EbZgFfxJsC2HtWJpspt3wDsyHiv7/t+3+dvNwL4p8V9dBSfoSjLhoq9BRsqZcPfuasrsg9h
+  80altmvbCFD6aBdsiHQk+BtHm85JOtnSnKjqLMfYL20DvuC6iTY98vkCYKdKr/TkaU2UZTIT24Z2
+  prxPNlsWBNTWeApsJwqyTZqDAwTbhDpBWi/PV+8peHbX0vRsI4KCLR1UM2J4glU+6PVls8WTrJPY
+  ZRtSxSX4dmpSWGr/tDRlHj48BadtwFceUpXX6f16qydP8arWRFmWjW49yvBWmi1BAVERYTdrz+hA
+  vQPAKMGvG6/qQQGwQmAxMSwbxswTbrCfq6aM3pM+JBhO8OcOnaRtMo+MJ8CBb9TcoA3464agtbyt
+  IUKZhg1tF6I1UZbp0cZtQ6ce18sSfPu5pYDWa3p5vl/u2KPmxvaHdZgUTklTXaM9YdVwVTOKKPJS
+  kHtOyfNNhMY2e5uazWJjnEfa45LHuQ349lMNBVVzk1WbCaJJeLTKMscLvrlIxxnJEnwl6PZgS+sF
+  vlJGgauaimqVDQm2Df3Uo/aay9Dzq0WWWdww4M0UiKZ+xrjmN0vULLYBXy8xvAwHvgAKZNpIyrKU
+  9ekYbljZ/K5bfIKvF+vNowXf8KWyoWqSk1WDIcryUpxrI/4dVlNznQn6ppEqXE+BXX2PlRNXT6nw
+  1cRpXFaEVDXBNbvXUU2Zgd5SWoYdQ4ahYzgbTln2n6BzavSTLQ13j37BN477BYyqZdhRDS21lZbL
+  skzmRoueVlJNhaZ1XqksQ6mEGsbNIjR41F20wJUmX34iQkAd+CYhk1Fphjs9wZrAa7QmyjLn5hzV
+  66jrKc3krmeq21QN1y/4cnQjQWn5jRv/VS8kHsmmfA+UryjKaxxnfhs6oQl+7lidrtEEYbw7OpKF
+  16ldsShzYS5eM2TJ49U9KtOuA9+izdCjWClNNdkm4Vl6WFNlmcnLY25tYshMObcFoPlFcGQ8MpN+
+  wZfpyabyC33OXfqt4tmT7InW/KbMQ0FUnEvWS/7NEOr1Yu4XQF5O8E2EgmgMlS8rUtKM+Sp5LQ4E
+  U7qmmaxciCfAE+G/erA7ahGiKCmPouMzFro5sgH5stTMBVkNGh8F3edoTZRlbrq1gvf1Ps7fROxX
+  fawuLXpOj/s2BT+V0xIRT/3PAgOraGWIEgVBNtGmKcqS2pq7sshy8+X5er7VvTi856ugKrqkX2Zv
+  vVp+r0zOpCLY1e/R+jUcawLH+rpBmuWx+0GojAU1K7+MjcZlJ2G5nq8XLHSUhptD0poqy5zrLkHh
+  DJ96ql5n+S9jS2sKvpTUZCvQ5hNfD/htGJ3WMGlRWK0tfJZhUIZkoWUoNtSYE0za1iVDNlLCLebd
+  fRw0Ah34g0a0wf068BuANeihHfiDRrTB/d4GEc7BUcDuUYUAAAAASUVORK5CYII=" />
+</div>
