--- a/dashboard/views/index.html
+++ b/dashboard/views/index.html
@@ -15,6 +15,7 @@
           </li>
           <li class="command-gamestate command-menu">Game State</li>
           <li class="command-kinect command-menu">Kinect</li>
+          <li class="command-snips command-menu">Snips</li>
         <ul>
       </div>
       <div class="uk-width-expand command-view command-current" name="gamestate" hidden>
@@ -22,6 +23,9 @@
       </div>
       <div class="uk-width-expand command-view" name="kinect" hidden>
         {% include 'kinect_subscriber.html' %}
+      </div>
+      <div class="uk-width-expand command-view" name="snips" hidden>
+        {% include 'snips_subscriber.html' %}
       </div>
     </div>
     <script src="dist/bundle.js"></script>
