--- a/dashboard/views/index.html
+++ b/dashboard/views/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>🤖 Robot dashboard</title>
-  </head>
-  <body>
-    <div class="uk-grid" uk-grid>
-      <div class="uk-width-1-6">
-        <ul class="uk-list">
-          <li>
-            <form class="uk-search">
-              <input class="uk-search-input command-search" type="search" placeholder="Search... (Todo)">
-            </form>
-          </li>
-          <li class="command-gamestate command-menu">Game State</li>
-          <li class="command-kinect command-menu">Kinect</li>
-          <li class="command-snips command-menu">Snips</li>
-        <ul>
+
+<head>
+  <meta charset="UTF-8">
+  <title>🤖 DEVINE Dashboard</title>
+
+  <!-- https://bootswatch.com/darkly/ -->
+  <link rel="stylesheet" href="/assets/css/bootstrap.darkly.min.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm border border-primary">
+        One of three columns
       </div>
-      <div class="uk-width-expand command-view command-current" name="gamestate" hidden>
-        {% include 'subscriber.html' %}
+      <div class="col-sm border border-info">
+        One of three columns
       </div>
-      <div class="uk-width-expand command-view" name="kinect" hidden>
-        {% include 'kinect_subscriber.html' %}
-      </div>
-      <div class="uk-width-expand command-view" name="snips" hidden>
-        {% include 'snips_subscriber.html' %}
+      <div class="col-sm border border-dark">
+            {% include 'kinect_subscriber.html' %}
       </div>
     </div>
-    <script src="dist/bundle.js"></script>
-  </body>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    crossorigin="anonymous"></script>
+  <script src="dist/bundle.js"></script>
+</body>
+
 </html>
