--- a/dashboard/views/kinect_subscriber.html
+++ b/dashboard/views/kinect_subscriber.html
@@ -1,16 +1,40 @@
-<select id="kinect_image_type">
-  <option value="/camera/rgb/image_color/compressed">Color Image</option>
-  <option value="/camera/rgb/image_mono/compressed">Mono Image</option>
-  <option value="/camera/ir/image_raw/compressed">IR</option>
-</select>
+<!-- <img src="/assets/img/kinect.png" class="mx-auto d-block kinect-logo"> -->
+<div class="card mb-3 border-primary">
+  <h3 class="card-header">
+    <span>Kinect Camera</span>
+    <select id="kinect_image_type" class="float-right">
+      <option value="/camera/rgb/image_color/compressed">Color Image</option>
+      <option value="/camera/rgb/image_mono/compressed">Mono Image</option>
+      <option value="/camera/ir/image_raw/compressed">IR</option>
+    </select>
+  </h3>
+  <div class="card-body">
+    <b class="text-info">Subscriptions:</b>
+    <label class="mb-0">
+      <input id="camera_checkbox" type="checkbox" checked="" class="uk-checkbox"> Camera</label>
+    <label class="mb-0">
+      <input id="segmentation_checkbox" type="checkbox" checked="" class="uk-checkbox"> Segmentation</label>
+  </div>
 
-<label><input id="subscribe_checkbox" type="checkbox" class="uk-checkbox"> Subscribe</label>
-<label><input id="segmentation_checkbox" type="checkbox" class="uk-checkbox"> Segmentation</label>
 
-<br /><br />
-Position found (2D): <span id="kinect_pos_found">N/A</span><br />
-Position calculated (3D): <span id="kinect_pos_calc">N/A</span>
-<br /><br />
-Delay:<br />
-<input type="range" min="1" max="1" value="1" class="slider" id="kinect_image_history" style="width:639px"><br />
-<canvas id="kinect_image" style="max-width:none" width="640" height="480"></canvas>
+  <canvas id="kinect_image" style="max-width:none" width="640" height="480"></canvas>
+
+  <ul class="list-group list-group-flush mt-0">
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-sm">
+          <b class="text-info">Position found (2D):</b>
+          <span id="kinect_pos_found">N/A</span>
+        </div>
+        <div class="col-sm">
+          <b class="text-info">Position calculated (3D):</b>
+          <span id="kinect_pos_calc">N/A</span>
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <b class="text-info">Delay:</b>
+      <input type="range" min="1" max="1" value="1" class="slider" id="kinect_image_history" style="width: 100%;">
+    </li>
+  </ul>
+</div>
