--- a/dashboard/views/index.html
+++ b/dashboard/views/index.html
@@ -13,14 +13,14 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm border border-primary">
-        One of three columns
+      <div class="col-sm">
+        {% include 'console.html' %}
       </div>
       <div class="col-sm border border-info">
         One of three columns
       </div>
-      <div class="col-sm border border-dark">
-            {% include 'kinect_subscriber.html' %}
+      <div class="col-sm">
+        {% include 'kinect_subscriber.html' %}
       </div>
     </div>
   </div>
