--- a/dashboard/views/console.html
+++ b/dashboard/views/console.html
@@ -3,8 +3,6 @@
         Console
     </h3>
     <div class="card-body">
-        <pre id="console" class="mb-0">
-                <!-- <font color="blue">blue text</font> > dsfsdf -->
-        </pre>
+        <pre id="console" class="mb-0"></pre>
     </div>
 </div>
