--- a/dashboard/views/kinect_subscriber.html
+++ b/dashboard/views/kinect_subscriber.html
@@ -1,4 +1,4 @@
-<div class="card mb-3 border-primary">
+<div class="card mb-3 border-info">
   <h3 class="card-header">
     <span>Kinect Camera</span>
     <select id="kinect_image_type" class="float-right">
