Added library locally + Bugs fix.

--- a/dashboard/views/snips_subscriber.html
+++ b/dashboard/views/snips_subscriber.html
@@ -14,7 +14,7 @@
                 </div>
                 <input id="snips_ask" placeholder="Is the object blue ?" type="text" class="form-control" style="border: none;">
                 <div class="input-group-append">
-                    <button id="snips_ask_btn" type="button" class="btn btn-primary">Ask</button>
+                    <button id="snips_ask_btn" disabled type="button" class="btn btn-primary">Ask</button>
                 </div>
             </div>
         </li>
