Added a topic publisher.

--- a/dashboard/views/index.html
+++ b/dashboard/views/index.html
@@ -17,6 +17,7 @@
         {% include 'console.html' %}
       </div>
       <div class="col-sm">
+        {% include 'publisher.html' %}
         {% include 'gamestate_subscriber.html' %}
         {% include 'snips_subscriber.html' %}
       </div>
@@ -27,9 +28,9 @@
   </div>
 
   <script src="/assets/js/jquery-3.3.1.slim.min.js"></script>
+  <script src="dist/bundle.js"></script>
   <script src="/assets/js/popper.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
-  <script src="dist/bundle.js"></script>
 </body>
 
 </html>
