--- a/dashboard/views/gamestate_subscriber.html
+++ b/dashboard/views/gamestate_subscriber.html
@@ -4,8 +4,10 @@
     </h3>
     <ul class="list-group list-group-flush mt-0">
         <li class="list-group-item">
-            <label class="mb-0">
-                <input id="gamestate_checkbox" type="checkbox" class="uk-checkbox"> Subscribe</label>
+            <div class="custom-control custom-checkbox">
+                <input class="custom-control-input" id="gamestate_checkbox" checked="" type="checkbox">
+                <label class="custom-control-label" for="gamestate_checkbox">Subscribe</label>
+            </div>
         </li>
     </ul>
 </div>
