Added missing topics.

--- a/dashboard/views/publisher.html
+++ b/dashboard/views/publisher.html
@@ -14,17 +14,11 @@
                         <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <div class="dropdown-menu" id="publisher_topics">
-                        <div class="dropdown-item disabled">List of frequently used topics</div>
-                        <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item">/confidence</a>
-                        <a class="dropdown-item">/object_found</a>
-                        <a class="dropdown-item">/question</a>
-                        <a class="dropdown-item">/vgg16_features</a>
-                        <a class="dropdown-item">/rcnn_segmentation</a>
-                        <a class="dropdown-item">/snips_ask</a>
+                        <div class="dropdown-item disabled">List of common topics for DEVINE</div>
+                        <div role="separator" class="dropdown-divider common-topics"></div>
                         <div role="separator" class="dropdown-divider"></div>
                         <div class="dropdown-item disabled">List of all available topics</div>
-                        <div role="separator" class="dropdown-divider"></div>
+                        <div role="separator" class="dropdown-divider all-topics"></div>
                     </div>
                 </div>
                 <input id="publisher_topic" placeholder="/snips_ask" type="text" class="form-control" style="border: none;">
