--- a/dashboard/views/console.html
+++ b/dashboard/views/console.html
@@ -1,6 +1,7 @@
 <div class="card border-success mb-3">
     <h3 class="card-header">
         Console
+        <button id="clear_console" type="button" class="btn btn-secondary float-right">Clear</button>
     </h3>
     <div class="card-body">
         <pre id="console" class="mb-0"></pre>
