--- a/dashboard/views/index.html
+++ b/dashboard/views/index.html
@@ -18,6 +18,7 @@
       </div>
       <div class="col-sm">
         {% include 'publisher.html' %}
+        {% include 'guesswhat_subscriber.html' %}
         {% include 'gamestate_subscriber.html' %}
         {% include 'snips_subscriber.html' %}
       </div>
