Refactor, bugs fix, and more features
New features:
- Reconnect to ROS server button
- Enter keypress on input box

--- a/dashboard/assets/css/styles.css
+++ b/dashboard/assets/css/styles.css
@@ -56,7 +56,7 @@ body > div {
     z-index: 0 !important;
 }
 
-#clear_console {
+#clear_console, #reconnect_to_ros {
     padding-top: 3px;
     padding-bottom: 3px;
 }
