--- a/dashboard/views/console.html
+++ b/dashboard/views/console.html
@@ -2,6 +2,7 @@
     <h3 class="card-header">
         Console
         <button id="clear_console" type="button" class="btn btn-secondary float-right">Clear</button>
+        <button id="reconnect_to_ros" type="button" class="btn btn-primary float-right" style="display: none;">Reconnect</button>
     </h3>
     <div class="card-body">
         <pre id="console" class="mb-0"></pre>
