--- a/dashboard/views/subscribers/kinect.html
+++ b/dashboard/views/subscribers/kinect.html
@@ -37,7 +37,7 @@
     </li>
     <li class="list-group-item">
       <b class="text-info">Delay:</b>
-      <input type="range" min="1" max="1" value="1" class="slider" id="kinect_image_history" style="width: 100%;">
+      <input type="range" min="1" max="1" value="1" class="slider" id="kinect_image_delay" style="width: 100%;">
     </li>
   </ul>
 </div>
