--- a/dashboard/views/publisher.html
+++ b/dashboard/views/publisher.html
@@ -21,7 +21,7 @@
                         <div role="separator" class="dropdown-divider all-topics"></div>
                     </div>
                 </div>
-                <input id="publisher_topic" placeholder="/snips_ask" type="text" class="form-control" style="border: none;">
+                <input id="publisher_topic" placeholder="/answer" type="text" class="form-control" style="border: none;">
             </div>
         </li>
         <li class="list-group-item">
@@ -33,6 +33,11 @@
                 <div class="input-group-append">
                     <button id="publisher_publish" type="button" class="btn btn-primary">Publish</button>
                 </div>
+            </div>
+            <br>
+            <div class="custom-control custom-checkbox ml-0">
+                <input class="custom-control-input" id="show_pub_checkbox" checked="" type="checkbox">
+                <label class="custom-control-label" for="show_pub_checkbox">Show message in console</label>
             </div>
         </li>
     </ul>
