--- a/dashboard/views/console.html
+++ b/dashboard/views/console.html
@@ -1,5 +1,5 @@
 <div class="card border-success mb-3">
-    <h3 class="card-header">
+    <h3 class="card-header console">
         Console
         <button id="clear_console" type="button" class="btn btn-secondary float-right">Clear</button>
         <button id="reconnect_to_ros" type="button" class="btn btn-primary float-right" style="display: none;">Reconnect</button>
