Better game flow + bugs fix.

--- a/dashboard/views/publisher.html
+++ b/dashboard/views/publisher.html
@@ -21,7 +21,7 @@
                         <div role="separator" class="dropdown-divider all-topics"></div>
                     </div>
                 </div>
-                <input id="publisher_topic" placeholder="/answer" type="text" class="form-control" style="border: none;">
+                <input id="publisher_topic" placeholder="/question" type="text" class="form-control" style="border: none;">
             </div>
         </li>
         <li class="list-group-item">
