Body tracking in ROS

--- a/dashboard/views/subscribers/kinect.html
+++ b/dashboard/views/subscribers/kinect.html
@@ -17,6 +17,10 @@
         <input class="custom-control-input" id="segmentation_checkbox" checked="" type="checkbox">
         <label class="custom-control-label" for="segmentation_checkbox">Segmentation</label>
       </div>
+      <div class="custom-control custom-checkbox">
+        <input class="custom-control-input" id="body_tracking_checkbox" checked="" type="checkbox">
+        <label class="custom-control-label" for="body_tracking_checkbox">Body tracking</label>
+      </div>
   </div>
 
 
