--- a/src/dashboard/src/devine_dashboard/css/styles.css
+++ b/src/dashboard/src/devine_dashboard/css/styles.css
@@ -1,63 +1,61 @@
-body, html {
-    height: 100%;
+body,
+html {
+  height: 100%;
 }
 
 body > div {
-    background-color: #222;
+  background-color: #222;
 }
 
-::-moz-selection {
-    background-color: #317572 !important;
-    color: #fff !important;
- }
- ::selection {
-     background-color: #317572 !important;
-     color: #fff !important;
- }
+::-moz-selection,
+::selection {
+  background-color: #317572 !important;
+  color: #fff !important;
+}
 
 #console {
-    overflow-x: auto;
-    height: 630px;
-    max-width: 500px;
-    background-color: transparent;
-    border: none;
-    color: white;
-    white-space: normal;
+  overflow-x: auto;
+  height: 630px;
+  max-width: 500px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  white-space: normal;
 }
 
 .card {
-    margin-top: 16px;
+  margin-top: 16px;
 }
 
 .card-header {
-    color: white;
+  color: white;
 }
 
 #kinect_image {
-    background-color: grey;
+  background-color: grey;
 }
 
 .custom-checkbox {
-    display: inline-block;
-    margin-left: 15px;
+  display: inline-block;
+  margin-left: 15px;
 }
 
 .custom-checkbox:first-child {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 #publisher_topics {
-    max-height: 500px;
-    max-width: 450px;
-    overflow: auto;
+  max-height: 500px;
+  max-width: 450px;
+  overflow: auto;
 }
 
 .btn {
-    /* Fix bug with overlapping dropdown menu */
-    z-index: 0 !important;
+  /* Fix bug with overlapping dropdown menu */
+  z-index: 0 !important;
 }
 
 .card .console .float-right {
-    padding-top: 3px;
-    padding-bottom: 3px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
