--- a/src/dashboard/src/devine_dashboard/css/styles.css
+++ b/src/dashboard/src/devine_dashboard/css/styles.css
@@ -70,3 +70,32 @@ body > div {
 .camera canvas {
   background-color: grey;
 }
+
+
+.demo .live-feed {
+  grid-area: live;
+}
+.demo .segmentation {
+  grid-area: seg;
+}
+.demo .dialog {
+  grid-area: dialog;
+}
+.demo .live-feed .camera {
+  border-color: #00BC8C !important;
+}
+.demo .dialog .console {
+  height: calc(100% - 32px);
+  border-color: #F39C12 !important;
+}
+
+.demo {
+  height: calc(100vh - 1.2rem);
+  display: grid;
+  grid-column-gap: 32px;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+    "live   seg"
+    "dialog dialog";
+}
